# MFT2025

./: .gitignore  README.md
CUBE-neon/: CUBE-neon.ino  IMU.h  LED.h  Untitled.ipynb  common.h  csv2header.ipynb  cube-graph.html  cube-sphere-graph.html  cube.csv  earth.h  half-grad-160-80.h  half-grad-half.csv  half-grad.csv  image.h  image2header-Copy1.ipynb  layout-.h  layout.h  led-cube.ipynb  make_image  quaternion.h  vector-.h
SPHERE_neon/: AGENTS.md  README.md  convert_led_layout.py  isolation_sphere_spec.md  isolation_sphere_tasks.md  partitions.csv  platformio copy.ini  platformio.ini
SPHERE_neon/include/: IMU.h  LED.h  common.h  earth.h  half-grad-full.h  half-grad-half.h  layout-sphere.h  layout.h  layout_new.h
SPHERE_neon/src/: main.cpp
SPHERE_neon/test/: test_sphere_imu_manager.cpp  test_sphere_strip_controller.cpp
atom-joystick/: JOYSTICK.md
atom-joystick/atom_joystick_main/: atom_joystick_main.ino  joystick_input.cpp  joystick_input.h  lcd_display.cpp  lcd_display.h  mqtt_broker.cpp  mqtt_broker.h  wifi_ap.cpp  wifi_ap.h
atom-joystick/atom_s3_receiver/: README.md  atom_s3_receiver.ino  config_manager.cpp  config_manager.h  led_controller.cpp  led_controller.h  opening_display.cpp  opening_display.h  udp_receiver.cpp  udp_receiver.h  wifi_client.cpp  wifi_client.h
atom-joystick/docs/: ARDUINO_IDE_INTEGRATION.md  DEVELOPMENT_WORKFLOW.md  MQTT_TOPICS.md
atom-joystick/test_clients/: README.md  dummy_esp32_client.py  dummy_raspi_client.py  mqtt_monitor.py  network_tester.py  pyproject.toml  requirements.txt
atom-joystick/test_clients/logs/: network_test_results.json
atom-joystick/test_clients/scripts/: clean.sh  setup.sh  test-all.sh
atom-joystick/test_sketches/: MQTT_TOPIC_SPECIFICATION.md  (+1 more)
data/: config.json  led_layout-x.csv  led_layout-y.csv  led_layout-z.csv  led_layout.csv
doc/: README.md  define_config.md  mqtt_rules.md
isolation-sphere/: .gitignore  AGENTS.md  README.md  analyze_led_overlap.py  analyze_yellow_issue.py  convert_esp32_log_to_csv.py  coordinate_analysis.py  create_thick_line_panorama.py  debug_red_channel.py  debug_uv_conversion.py  extract_panorama_green.py  isolation_sphere_spec.md  isolation_sphere_tasks.md  led_uv_analysis.csv  led_uv_comparison.csv  mqtt_rules.md  panorama_analysis.py  panorama_green_320x160.csv  panorama_red_320x160.csv  panorama_thick_green_320x160.csv  panorama_thick_red_320x160.csv  partitions.csv  platformio.ini  python_led_colors.csv  ui_rules.md  verify_esp32_vs_python.py  visualize_led_layout.py
joystick/: AGENTS.md  AUDIO_CONFIG.md  BUZZER_TEST.md  MQTT_RULES.md  MQTT_TEST.md  README.md  SIMPLE_AUDIO.md  joystick_spec.md  joystick_tasks.md  joystick_ui.md  partitions.csv  platformio.ini
(+209 files in other folders)
